--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
+/* @font-face {
   font-family: estedad;
   src: url("./Fonts/Estedad-v5.0-Fontjo.com/Estedad[wght\,kshd].ttf") format("truetype");
-}
+} */
 
 body {
   margin: 0;
